--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
 <body>
   <header class="header">
     <div class="container container-nav-link">
-      <a href="#" class="nav-logo"><span class="nav-logo-title">Web</span>Studio</a>
+      <a href="#" class="nav-logo"><span class="nav-logo__title">Web</span>Studio</a>
       <nav class="navigation-link">
-        <ul class="nav-link">
-          <li>
-            <a href="#" class="link link-item">Студія</a>
+        <ul class="navigation-link__nav-link">
+          <li class="navigation-link__list">
+            <a href="#" class="navigation-link__link link-item">Студія</a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="link">Портфоліо</a>
+          <li class="navigation-link__list">
+            <a href="./portfolio.html" class="navigation-link__link">Портфоліо</a>
           </li>
-          <li>
-            <a href="#" class="link">Контакти</a>
+          <li class="navigation-link__list">
+            <a href="#" class="navigation-link__link">Контакти</a>
           </li>
         </ul>
       </nav>
       <ul class="link-contact">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contact contact-mail">
-            <svg class="envelop" width="16" height="12">
+        <li class="contacts">
+          <a href="mailto:info@devstudio.com" class="contacts__contact contact-mail">
+            <svg class="contacts__envelop" width="16" height="12">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com</a>
         </li>
-        <li>
-          <a href="tel:+380961111111" class="contact contact-tel">
-            <svg class="smartphone" width="10" height="16">
+        <li class="contacts">
+          <a href="tel:+380961111111" class="contacts__contact contact-tel">
+            <svg class="contacts__smartphone" width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
             +38 096 111 11 11</a>
@@ -52,9 +52,9 @@
   </header>
   <main>
     <section class="title">
-      <div class="container container-title">
-        <h1 class="title-header">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="btn" data-modal-open>Замовити послугу</button>
+      <div class=" title__container-title container ">
+        <h1 class="title__header">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="title__btn" data-modal-open>Замовити послугу</button>
       </div>
     </section>
     <section class="benefits">
