--- a/index.html
+++ b/index.html
@@ -61,45 +61,45 @@
       <div class="container">
         <h2 class="caption">Наші переваги</h2>
         <ul class="benefits-list">
-          <li class="item">
-            <div class="icons">
-              <svg class="icons-group" width="70" height="70">
+          <li class="benefits-list__item">
+            <div class="benefits-list__icons">
+              <svg class="benefits-list__icons-group" width="70" height="70">
                 <use href="./images/icons.svg#icon-group"></use>
               </svg>
             </div>
-            <h3 class="item-header">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="text">
+            <h3 class="benefits-list__item-header">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="benefits-list__text">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
-          <li class="item">
-            <div class="icons">
-              <svg class="icons-group" width="70" height="70">
+          <li class="benefits-list__item">
+            <div class="benefits-list__icons">
+              <svg class="benefits-list__icons-group" width="70" height="70">
                 <use href="./images/icons.svg#icon-clock1"></use>
               </svg>
             </div>
-            <h3 class="item-header">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="text">
+            <h3 class="ibenefits-list__tem-header">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="benefits-list__text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
-          <li class="item">
-            <div class="icons">
-              <svg class="icons-group" width="70" height="70">
+          <li class="benefits-list__item">
+            <div class="benefits-list__icons">
+              <svg class="benefits-list__icons-group" width="70" height="70">
                 <use href="./images/icons.svg#icon-diagram1"></use>
               </svg>
             </div>
-            <h3 class="item-header">ПЛАНУВАННЯ</h3>
-            <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="benefits-list__item-header">ПЛАНУВАННЯ</h3>
+            <p class="benefits-list__text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
-          <li class="item">
-            <div class="icons">
-              <svg class="icons-group" width="70" height="70">
+          <li class="benefits-list__item">
+            <div class="benefits-list__icons">
+              <svg class="benefits-list__icons-group" width="70" height="70">
                 <use href="./images/icons.svg#icon-astronaut1"></use>
               </svg>
             </div>
-            <h3 class="item-header">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="text">
+            <h3 class="benefits-list__item-header">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="benefits-list__text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
           </li>
