--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header class="header">
     <div class="container container-nav-link">
-      <a href="#" class="nav-logo"><span class="nav-logo__title">Web</span>Studio</a>
+      <a href="#" class="nav-logo"><span class="nav-logo-title--color">Web</span>Studio</a>
       <nav class="navigation-link">
         <ul class="navigation-link__nav-link">
           <li class="navigation-link__list">
@@ -110,22 +110,22 @@
       <div class="container">
         <h2 class="work">Чим ми займаємося</h2>
         <ul class="work-photo">
-          <li class="lessons">
+          <li class="work-photo__lessons">
             <img src="./images/photo1.jpg" alt="людина працює на планшеті" width="370" height="294" />
-            <div class="lessons-list">
-              <h2 class="lessons-item">Десктопні додатки</h2>
+            <div class="work-photo__lessons-list">
+              <h2 class="work-photo__lessons-item">Десктопні додатки</h2>
             </div>
           </li>
-          <li class="lessons">
+          <li class="work-photo__lessons">
             <img src="./images/photo2.jpg" alt="людина працює за ноутбуком" width="370" height="294" />
-            <div class="lessons-list">
-              <h2 class="lessons-item">Мобільні додатки</h2>
+            <div class="work-photo__lessons-list">
+              <h2 class="work-photo__lessons-item">Мобільні додатки</h2>
             </div>
           </li>
-          <li class="lessons">
+          <li class="work-photo__lessons">
             <img src="./images/photo3.jpg" alt="людина працює на планшеті" width="370" height="294" />
-            <div class="lessons-list">
-              <h2 class="lessons-item">Дизайнерські рішення</h2>
+            <div class="work-photo__lessons-list">
+              <h2 class="work-photo__lessons-item">Дизайнерські рішення</h2>
             </div>
           </li>
         </ul>
